Implement methods for receiving images and filtering reports